--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/bookfy.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.12.jar=libs\\controlsfx-8.40.12.jar
 file.reference.jfoenix.jar=libs\\jfoenix.jar
 file.reference.mysql-connector-java-5.1.40-bin.jar=libs\\mysql-connector-java-5.1.40-bin.jar
 includes=**
@@ -39,7 +40,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.jfoenix.jar}:\
-    ${file.reference.mysql-connector-java-5.1.40-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.40-bin.jar}:\
+    ${file.reference.controlsfx-8.40.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
